maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:13: error: illegal start of simple pattern
    case !estFaceMur => avance()
                     ^RandomMouseMaze:14: error: '=>' expected but '}' found.
  }
  ^